JavaExampleCollections/src/kr/co/leehana/example/exception/rejectedexecutionexception/RejectedExecutionExceptionExample.java
package kr.co.leehana.example.exception.rejectedexecutionexception;

public class RejectedExecutionExceptionExample {

	public static void main(String[] args) {
		// TODO Auto-generated method stub

	}

}
